still trying to fix invisible link error...

--- a/app/assets/stylesheets/map.css.scss
+++ b/app/assets/stylesheets/map.css.scss
@@ -56,7 +56,7 @@
 	top: 44%;
 	left: 41.8%;
 	.stationLink {
-		font-size: 1.01em;
+		font-size: 1.1em;
 	}
 } 
 
@@ -83,7 +83,7 @@
 	top: 58.6%;
 	left: 7.1%;
 	.stationLink {
-		font-size: 1em;
+		font-size: 1.1em;
 	}
 } 
 
@@ -92,7 +92,7 @@
 	top: 34.2%;
 	left: 33.3%;
 	.stationLink {
-		font-size: 1em;
+		font-size: 1.1em;
 	}
 } 
 
@@ -101,7 +101,7 @@
 	top: 62.5%;
 	left: 7.3%;
 	.stationLink {
-		font-size: 1em;
+		font-size: 1.1em;
 	}
 } 
 
@@ -110,7 +110,7 @@
 	top: 66%;
 	left: 55.5%;
 	.stationLink {
-		font-size: 1em;
+		font-size: 1.1em;
 	}
 } 
 
@@ -119,7 +119,7 @@
 	top: 70.7%;
 	left: 61.8%;
 	.stationLink {
-		font-size: 1em;
+		font-size: 1.1em;
 	}
 } 
 
@@ -128,7 +128,7 @@
 	top: 54.9%;
 	left: 11.6%;
 	.stationLink {
-		font-size: 1em;
+		font-size: 1.1em;
 	}
 } 
 
@@ -137,7 +137,7 @@
 	top: 58.9%;
 	left: 49.6%;
 	.stationLink {
-		font-size: 1em;
+		font-size: 1.1em;
 	}
 } 
 
@@ -146,7 +146,7 @@
 	top: 71%;
 	left: 10.7%;
 	.stationLink {
-		font-size: 1em;
+		font-size: 1.1em;
 	}
 } 
 
@@ -155,7 +155,7 @@
 	top: 16.6%;
 	left: 69.6%;
 	.stationLink {
-		font-size: 1em;
+		font-size: 1.1em;
 	}
 } 
 
@@ -173,7 +173,7 @@
 	top: 31.8%;
 	left: 23.6%;
 	.stationLink {
-		font-size: 1em;
+		font-size: 1.1em;
 	}
 } 
 
@@ -191,7 +191,7 @@
 	top: 23%;
 	left: 19.5%;
 	.stationLink {
-		font-size: 1em;
+		font-size: 1.1em;
 	}
 } 
 
@@ -200,7 +200,7 @@
 	top: 26%;
 	left: 23.5%;
 	.stationLink {
-		font-size: 1em;
+		font-size: 1.1em;
 	}
 } 
 
@@ -209,7 +209,7 @@
 	top: 49.6%;
 	left: 13.9%;
 	.stationLink {
-		font-size: 1em;
+		font-size: 1.1em;
 	}
 } 
 
@@ -227,7 +227,7 @@
 	top: 55.3%;
 	left: 46.8%;
 	.stationLink {
-		font-size: 1em;
+		font-size: 1.1em;
 	}
 } 
 
@@ -236,7 +236,7 @@
 	top: 60.5%;
 	left: 9.8%;
 	.stationLink {
-		font-size: 1em;
+		font-size: 1.1em;
 	}
 } 
 
@@ -245,7 +245,7 @@
 	top: 77.3%;
 	left: 53.2%;
 	.stationLink {
-		font-size: 1em;
+		font-size: 1.1em;
 	}
 } 
 
@@ -254,7 +254,7 @@
 	top: 27.5%;
 	left: 54.9%;
 	.stationLink {
-		font-size: 1em;
+		font-size: 1.1em;
 	}
 } 
 
@@ -263,7 +263,7 @@
 	top: 51.6%;
 	left: 44%;
 	.stationLink {
-		font-size: 1em;
+		font-size: 1.1em;
 	}
 } 
 
@@ -272,7 +272,7 @@
 	top: 38%;
 	left: 42.2%;
 	.stationLink {
-		font-size: 1em;
+		font-size: 1.1em;
 	}
 } 
 
@@ -290,7 +290,7 @@
 	top: 51.3%;
 	left: 11.3%;
 	.stationLink {
-		font-size: 1em;
+		font-size: 1.1em;
 	}
 } 
 
@@ -299,7 +299,7 @@
 	top: 29%;
 	left: 25.4%;
 	.stationLink {
-		font-size: 1em;
+		font-size: 1.1em;
 	}
 } 
 
@@ -308,7 +308,7 @@
 	top: 12.9%;
 	left: 74.9%;
 	.stationLink {
-		font-size: 1em;
+		font-size: 1.1em;
 	}
 } 
 
@@ -317,7 +317,7 @@
 	top: 31%;
 	left: 50%;
 	.stationLink {
-		font-size: 1em;
+		font-size: 1.1em;
 	}
 } 
 
@@ -335,7 +335,7 @@
 	top: 20.1%;
 	left: 65%;
 	.stationLink {
-		font-size: 1em;
+		font-size: 1.1em;
 	}
 } 
 
@@ -344,7 +344,7 @@
 	top: 53.1%;
 	left: 14.1%;
 	.stationLink {
-		font-size: 1em;
+		font-size: 1.1em;
 	}
 } 
 
@@ -362,7 +362,7 @@
 	top: 34.7%;
 	left:45.1%;
 	.stationLink {
-		font-size: 1em;
+		font-size: 1.1em;
 	}
 } 
 
@@ -371,7 +371,7 @@
 	top: 78.5%;
 	left: 12.5%;
 	.stationLink {
-		font-size: 1em;
+		font-size: 1.1em;
 	}
 } 
 
@@ -389,7 +389,7 @@
 	top: 62.4%;
 	left: 52.5%;
 	.stationLink {
-		font-size: 1em;
+		font-size: 1.1em;
 	}
 } 
 
@@ -398,7 +398,7 @@
 	top: 83.1%;
 	left: 53.9%;
 	.stationLink {
-		font-size: 1em;
+		font-size: 1.1em;
 	}
 } 
 
@@ -407,7 +407,7 @@
 	top: 74.4%;
 	left: 3.8%;
 	.stationLink {
-		font-size: 1em;
+		font-size: 1.1em;
 	}
 } 
 
@@ -416,7 +416,7 @@
 	top: 89.8%;
 	left: 62.4%;
 	.stationLink {
-		font-size: 1em;
+		font-size: 1.1em;
 	}
 } 
 
@@ -425,7 +425,7 @@
 	top: 23.9%;
 	left: 59.9%;
 	.stationLink {
-		font-size: 1em;
+		font-size: 1.1em;
 	}
 } 
 #station_wdub {
@@ -433,7 +433,7 @@
 	top: 69.5%;
 	left: 74.8%;
 	.stationLink {
-		font-size: 1em;
+		font-size: 1.1em;
 	}
 }
 
@@ -442,6 +442,6 @@
 	top: 45%;
 	left: 28%;
 	.stationLink {
-		font-size: 1em;
+		font-size: 1.1em;
 	}
 }
